@@ -22,6 +22,21 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertThat;
 
+import com.facebook.buck.core.build.context.BuildContext;
+import com.facebook.buck.core.cell.TestCellPathResolver;
+import com.facebook.buck.core.cell.resolver.CellPathResolver;
+import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.InternalFlavor;
+import com.facebook.buck.core.rulekey.RuleKey;
+import com.facebook.buck.core.rulekey.RuleKeyObjectSink;
+import com.facebook.buck.core.rules.resolver.impl.TestBuildRuleResolver;
+import com.facebook.buck.core.sourcepath.PathSourcePath;
+import com.facebook.buck.core.sourcepath.SourcePath;
+import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
+import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.core.toolchain.tool.Tool;
+import com.facebook.buck.core.toolchain.tool.impl.CommandTool;
+import com.facebook.buck.core.toolchain.tool.impl.HashedFileTool;
 import com.facebook.buck.cxx.toolchain.Compiler;
 import com.facebook.buck.cxx.toolchain.CxxPlatformUtils;
 import com.facebook.buck.cxx.toolchain.DefaultCompiler;
@@ -29,24 +44,11 @@ import com.facebook.buck.cxx.toolchain.GccCompiler;
 import com.facebook.buck.cxx.toolchain.GccPreprocessor;
 import com.facebook.buck.cxx.toolchain.Preprocessor;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
-import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
-import com.facebook.buck.rules.BuildContext;
-import com.facebook.buck.rules.CellPathResolver;
-import com.facebook.buck.rules.CommandTool;
-import com.facebook.buck.rules.DefaultSourcePathResolver;
 import com.facebook.buck.rules.FakeBuildContext;
+import com.facebook.buck.rules.FakeBuildRule;
 import com.facebook.buck.rules.FakeSourcePath;
-import com.facebook.buck.rules.HashedFileTool;
-import com.facebook.buck.rules.PathSourcePath;
-import com.facebook.buck.rules.RuleKey;
-import com.facebook.buck.rules.RuleKeyObjectSink;
-import com.facebook.buck.rules.SourcePath;
-import com.facebook.buck.rules.SourcePathResolver;
 import com.facebook.buck.rules.SourcePathRuleFinder;
-import com.facebook.buck.rules.TestBuildRuleResolver;
-import com.facebook.buck.rules.TestCellPathResolver;
-import com.facebook.buck.rules.Tool;
 import com.facebook.buck.rules.args.RuleKeyAppendableFunction;
 import com.facebook.buck.rules.args.StringArg;
 import com.facebook.buck.rules.coercer.FrameworkPath;
@@ -56,7 +58,6 @@ import com.facebook.buck.testutil.FakeProjectFilesystem;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSortedSet;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Optional;
@@ -93,7 +94,8 @@ public class CxxPreprocessAndCompileTest {
   private static final String DEFAULT_OUTPUT = "test.o";
   private static final SourcePath DEFAULT_INPUT = FakeSourcePath.of("test.cpp");
   private static final CxxSource.Type DEFAULT_INPUT_TYPE = CxxSource.Type.CXX;
-  private static final Path DEFAULT_WORKING_DIR = Paths.get(System.getProperty("user.dir"));
+  private static final PathSourcePath DEFAULT_WORKING_DIR =
+      FakeSourcePath.of(System.getProperty("user.dir"));
   private static final RuleKeyAppendableFunction<FrameworkPath, Path>
       DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION =
           new DefaultFramworkPathSearchPathAppendableFunction();
@@ -156,7 +158,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -164,8 +166,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
 
     // Verify that changing the compiler causes a rulekey change.
 
@@ -175,7 +176,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         new GccCompiler(
@@ -186,8 +187,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, compilerChange);
 
     // Verify that changing the operation causes a rulekey change.
@@ -198,7 +198,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new PreprocessorDelegate(
                         CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                         DEFAULT_WORKING_DIR,
@@ -206,7 +206,9 @@ public class CxxPreprocessAndCompileTest {
                         PreprocessorFlags.builder().build(),
                         DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                         Optional.empty(),
-                        /* leadingIncludePaths */ Optional.empty()),
+                        /* leadingIncludePaths */ Optional.empty(),
+                        Optional.of(
+                            new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps"))))),
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -215,8 +217,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
                     Optional.empty(),
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, operationChange);
 
     // Verify that changing the platform flags causes a rulekey change.
@@ -227,7 +228,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -238,8 +239,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, platformFlagsChange);
 
     // Verify that changing the rule flags causes a rulekey change.
@@ -250,7 +250,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -261,8 +261,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, ruleFlagsChange);
 
     // Verify that changing the input causes a rulekey change.
@@ -273,7 +272,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.compile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -281,8 +280,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_OUTPUT,
                     FakeSourcePath.of("/root/different"),
                     DEFAULT_INPUT_TYPE,
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
     assertNotEquals(defaultRuleKey, inputChange);
   }
 
@@ -312,7 +310,7 @@ public class CxxPreprocessAndCompileTest {
                 CxxPreprocessAndCompile.preprocessAndCompile(
                     target,
                     projectFilesystem,
-                    ImmutableSortedSet.of(),
+                    ruleFinder,
                     new PreprocessorDelegate(
                         CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                         DEFAULT_WORKING_DIR,
@@ -320,7 +318,9 @@ public class CxxPreprocessAndCompileTest {
                         flags,
                         DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                         Optional.empty(),
-                        /* leadingIncludePaths */ Optional.empty()),
+                        /* leadingIncludePaths */ Optional.empty(),
+                        Optional.of(
+                            new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps"))))),
                     new CompilerDelegate(
                         CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                         DEFAULT_COMPILER,
@@ -329,8 +329,7 @@ public class CxxPreprocessAndCompileTest {
                     DEFAULT_INPUT,
                     DEFAULT_INPUT_TYPE,
                     Optional.empty(),
-                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-                    Optional.empty()));
+                    CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER));
       }
     }
     TestData testData = new TestData();
@@ -345,8 +344,8 @@ public class CxxPreprocessAndCompileTest {
   @Test
   public void usesCorrectCommandForCompile() {
     // Setup some dummy values for inputs to the CxxPreprocessAndCompile.
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestBuildRuleResolver());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     CxxToolFlags flags =
         CxxToolFlags.explicitBuilder()
@@ -360,14 +359,13 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER, DEFAULT_COMPILER, flags),
             outputName,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
 
     ImmutableList<String> expectedCompileCommand =
         ImmutableList.<String>builder()
@@ -375,9 +373,9 @@ public class CxxPreprocessAndCompileTest {
             .add("-x", "c++")
             .add("-ffunction-sections")
             .add("-O3")
+            .add("-o", "buck-out/gen/foo/bar__/test.o")
             .add("-c")
             .add(input.toString())
-            .add("-o", "buck-out/gen/foo/bar__/test.o")
             .build();
     ImmutableList<String> actualCompileCommand =
         buildRule.makeMainStep(pathResolver, false).getCommand();
@@ -394,8 +392,8 @@ public class CxxPreprocessAndCompileTest {
     SourcePath compiler = FakeSourcePath.of(projectFilesystem, "compiler");
     Tool compilerTool = new CommandTool.Builder().addInput(compiler).build();
 
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestBuildRuleResolver());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     BuildContext context = FakeBuildContext.withSourcePathResolver(pathResolver);
 
@@ -408,7 +406,7 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new PreprocessorDelegate(
                 CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                 DEFAULT_WORKING_DIR,
@@ -416,7 +414,8 @@ public class CxxPreprocessAndCompileTest {
                 PreprocessorFlags.builder().build(),
                 DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                 Optional.empty(),
-                /* leadingIncludePaths */ Optional.empty()),
+                /* leadingIncludePaths */ Optional.empty(),
+                Optional.of(new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps"))))),
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 DEFAULT_COMPILER,
@@ -425,8 +424,7 @@ public class CxxPreprocessAndCompileTest {
             fakeInput,
             DEFAULT_INPUT_TYPE,
             Optional.empty(),
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
         cxxPreprocess.getInputsAfterBuildingLocally(context, cellPathResolver),
         hasItem(preprocessor));
@@ -435,7 +433,7 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 new GccCompiler(compilerTool),
@@ -443,16 +441,15 @@ public class CxxPreprocessAndCompileTest {
             DEFAULT_OUTPUT,
             fakeInput,
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
     assertThat(
         cxxCompile.getInputsAfterBuildingLocally(context, cellPathResolver), hasItem(compiler));
   }
 
   @Test
   public void usesColorFlagForCompilationWhenRequested() {
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestBuildRuleResolver());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     String output = "test.o";
     Path input = Paths.get("test.ii");
@@ -467,13 +464,12 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.compile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             compilerDelegate,
             output,
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
 
     ImmutableList<String> command =
         buildRule
@@ -490,8 +486,8 @@ public class CxxPreprocessAndCompileTest {
 
   @Test
   public void usesColorFlagForPreprocessingWhenRequested() {
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(new TestBuildRuleResolver()));
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(new TestBuildRuleResolver());
+    SourcePathResolver pathResolver = DefaultSourcePathResolver.from(ruleFinder);
     BuildTarget target = BuildTargetFactory.newInstance("//foo:bar");
     String output = "test.ii";
     Path input = Paths.get("test.cpp");
@@ -500,7 +496,7 @@ public class CxxPreprocessAndCompileTest {
         CxxPreprocessAndCompile.preprocessAndCompile(
             target,
             projectFilesystem,
-            ImmutableSortedSet.of(),
+            ruleFinder,
             new PreprocessorDelegate(
                 CxxPlatformUtils.DEFAULT_PLATFORM.getHeaderVerification(),
                 DEFAULT_WORKING_DIR,
@@ -508,7 +504,8 @@ public class CxxPreprocessAndCompileTest {
                 PreprocessorFlags.builder().build(),
                 DEFAULT_FRAMEWORK_PATH_SEARCH_PATH_FUNCTION,
                 Optional.empty(),
-                /* leadingIncludePaths */ Optional.empty()),
+                /* leadingIncludePaths */ Optional.empty(),
+                Optional.of(new FakeBuildRule(target.withFlavors(InternalFlavor.of("deps"))))),
             new CompilerDelegate(
                 CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
                 COMPILER_WITH_COLOR_SUPPORT,
@@ -517,8 +514,7 @@ public class CxxPreprocessAndCompileTest {
             FakeSourcePath.of(input.toString()),
             DEFAULT_INPUT_TYPE,
             Optional.empty(),
-            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER,
-            Optional.empty());
+            CxxPlatformUtils.DEFAULT_COMPILER_DEBUG_PATH_SANITIZER);
 
     ImmutableList<String> command =
         buildRule
